--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "clean": "npm run clean:dev && npm run clean:build",
     "start": "parcel src/index.html --out-dir development -p 1000",
     "dev": "npm run clean:dev && parcel src/index.html --out-dir development -p 1000 --open",
-    "build": "parcel build src/*.html --out-dir dist --src-url ./"
+    "build": "parcel build src/index.html --out-dir dist"
   },
   "keywords": [],
   "author": "Ayinde Sodiq",
@@ -17,6 +17,7 @@
   "devDependencies": {
     "@babel/core": "^7.11.6",
     "@babel/preset-env": "^7.11.5",
+    "cssnano": "^4.1.10",
     "sass": "^1.26.10"
   },
   "dependencies": {
